--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -62,7 +62,7 @@
 		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-09b3c40f.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-6fda3d72.js">
+		<link rel="modulepreload" href="./_app/immutable/start-39a3971c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
@@ -120,7 +120,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-833 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-613 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -184,14 +184,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="fqz5vs">
-			import { start } from "./_app/immutable/start-6fda3d72.js";
+		<script type="module" data-sveltekit-hydrate="1dmlozo">
+			import { start } from "./_app/immutable/start-39a3971c.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="fqz5vs"]').parentNode,
-				version: "1679224511711",
+				target: document.querySelector('[data-sveltekit-hydrate="1dmlozo"]').parentNode,
+				version: "1679331463364",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
