--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -13,8 +13,6 @@
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
 				Tera Type Calculator,
-				Best Tera Raid Builds,
-				Build,
 				Walking Wake,
 				Iron Leaves,
 				Walking Wake Raid,
@@ -56,27 +54,26 @@
 		<meta name="revisit-after" content="1 days" />
 		<meta name="author" content="Blitzlord" />
 		<base href="/" />
+		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://securepubads.g.doubleclick.net/" crossorigin>
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-c6dfcd8f.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-09b3c40f.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-de208840.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-de548609.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-da236e82.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/tera.raid-390cb35e.js">
+		<link rel="modulepreload" href="./_app/immutable/start-58dbc201.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-625d1a5d.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-692bcc6a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-d73a1027.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-73a52b3d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/tera.scores-094278cd.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-2f2846bf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c0960786.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-066122f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-8152b69a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-dc646829.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-iuuqu6_START --><meta property="og:url" content="https://terastal.net/tera-type-calculator.html"><link rel="canonical" href="https://terastal.net/tera-type-calculator.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-1oik806_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -84,7 +81,7 @@
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-8L9PXM6PDZ');
-	</script><!-- HEAD_svelte-iuuqu6_END -->
+	</script><!-- HEAD_svelte-1oik806_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -102,7 +99,7 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/type-symbols.html">Type Symbols</a></li>
+					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
 					<li class="nav-item">
 						<button class="type type__button" data-type="Dark" style="margin-right: 10px;"><span>Dark Mode</span></button></li>
 					<li class="nav-item">
@@ -124,7 +121,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-114 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-603 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -188,16 +185,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1esgg82">
-			import { start } from "./_app/immutable/start-de208840.js";
+		<script type="module" data-sveltekit-hydrate="bwqhz7">
+			import { start } from "./_app/immutable/start-58dbc201.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1esgg82"]').parentNode,
-				version: "1681670864888",
+				target: document.querySelector('[data-sveltekit-hydrate="bwqhz7"]').parentNode,
+				version: "1681671120737",
 				hydrate: {
-					node_ids: [0, 7],
+					node_ids: [0, 4],
 					data: [null,null],
 					form: null
 				}
