--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-4255f6f5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-58dbc201.js">
+		<link rel="modulepreload" href="./_app/immutable/start-220fbcd0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-625d1a5d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9660c48c.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-e6df5d7f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-73a52b3d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-d73a1027.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -114,18 +114,18 @@
 				<div id="nn_mobile_lb2"></div></div>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 									<form class="pokemon-search-form svelte-1l3vorx"><div class="row"><div class="col-12 px-0"><small>Recent Events:</small><br>
-												<button type="button" class="preset" data-type="Ghost"><div class="type"></div>
+												<button type="button" class="preset" data-type="Normal"><div class="type"></div>
+													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div></div>
+													<div class="name">Blissey</div>
+													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(/assets/i/242.min.png);"></div></div>
+												</button><button type="button" class="preset" data-type="Ghost"><div class="type"></div>
 													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div><div class="star star__preset" data-star="6"></div><div class="star star__preset" data-star="7"></div></div>
 													<div class="name">Typhlosion</div>
 													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(/assets/i/157.min.png);"></div></div>
-												</button><button type="button" class="preset" data-type="Normal"><div class="type"></div>
-													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div></div>
-													<div class="name">Ditto</div>
-													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(/assets/i/132.min.png);"></div></div>
 												</button></div>
 											<div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-316 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-255 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -421,14 +421,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="vqtoui">
-			import { start } from "./_app/immutable/start-58dbc201.js";
+		<script type="module" data-sveltekit-hydrate="b4v375">
+			import { start } from "./_app/immutable/start-220fbcd0.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="vqtoui"]').parentNode,
-				version: "1681671120737",
+				target: document.querySelector('[data-sveltekit-hydrate="b4v375"]').parentNode,
+				version: "1682025446013",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
